[gd_scene load_steps=9 format=3 uid="uid://main_scene"]

[ext_resource type="Script" path="res://scripts/game_manager.gd" id="1"]
[ext_resource type="Script" path="res://scripts/player_car.gd" id="2"]
[ext_resource type="Script" path="res://scripts/road_generator.gd" id="3"]
[ext_resource type="Script" path="res://scripts/obstacle_spawner.gd" id="4"]
[ext_resource type="Script" path="res://scripts/fuel_spawner.gd" id="5"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="6"]
[ext_resource type="Script" path="res://scripts/upgrade_menu.gd" id="7"]
[ext_resource type="Script" path="res://scripts/steering_wheel.gd" id="8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 70)

[node name="Main" type="Node"]
script = ExtResource("1")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Road" type="Node2D" parent="."]
script = ExtResource("3")

[node name="Player" type="CharacterBody2D" parent="."]
script = ExtResource("2")

[node name="CarVisual" type="ColorRect" parent="Player"]
offset_left = -20.0
offset_top = -35.0
offset_right = 20.0
offset_bottom = 35.0
color = Color(0.2, 0.6, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_1")

[node name="ObstacleSpawner" type="Node2D" parent="."]
script = ExtResource("4")

[node name="FuelSpawner" type="Node2D" parent="."]
script = ExtResource("5")

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("6")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0

[node name="VBoxContainer" type="VBoxContainer" parent="HUD/MarginContainer"]
layout_mode = 2

[node name="DistanceLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Distance: 0 m"
theme_override_font_sizes/font_size = 32

[node name="TimeLabel" type="Label" parent="HUD/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time: 00:00"
theme_override_font_sizes/font_size = 32

[node name="FuelBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="DurabilityBar" type="ProgressBar" parent="HUD/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 40)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="SteeringWheel" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -250.0
offset_right = 100.0
offset_bottom = -50.0
script = ExtResource("8")

[node name="WheelSprite" type="ColorRect" parent="HUD/SteeringWheel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -80.0
offset_right = 80.0
offset_bottom = 80.0
color = Color(0.4, 0.4, 0.4, 0.8)

[node name="UpgradeMenu" type="CanvasLayer" parent="."]
script = ExtResource("7")

[node name="Panel" type="Panel" parent="UpgradeMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -400.0
offset_right = 300.0
offset_bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="UpgradeMenu/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -300.0
offset_right = 250.0
offset_bottom = 300.0

[node name="Label" type="Label" parent="UpgradeMenu/Panel/VBoxContainer"]
layout_mode = 2
text = "Choose Upgrade"
theme_override_font_sizes/font_size = 48
horizontal_alignment = 1

[node name="SpeedButton" type="Button" parent="UpgradeMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "Speed +30%"
theme_override_font_sizes/font_size = 36

[node name="DurabilityButton" type="Button" parent="UpgradeMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "Durability +50%"
theme_override_font_sizes/font_size = 36

[node name="FuelButton" type="Button" parent="UpgradeMenu/Panel/VBoxContainer"]
custom_minimum_size = Vector2(0, 120)
layout_mode = 2
text = "Fuel Tank +50%"
theme_override_font_sizes/font_size = 36

[connection signal="pressed" from="UpgradeMenu/Panel/VBoxContainer/SpeedButton" to="UpgradeMenu" method="_on_speed_button_pressed"]
[connection signal="pressed" from="UpgradeMenu/Panel/VBoxContainer/DurabilityButton" to="UpgradeMenu" method="_on_durability_button_pressed"]
[connection signal="pressed" from="UpgradeMenu/Panel/VBoxContainer/FuelButton" to="UpgradeMenu" method="_on_fuel_button_pressed"]
